--- a/latex/chapter-implementation.tex
+++ b/latex/chapter-implementation.tex
@@ -18,6 +18,7 @@
 \subsection{Authentication}
 
 \subsection{Firebase Security Policy Rules}
+\label{sec:security}
 
 \section{Internationalization}
 \subsection{Architecture}
