--- a/latex/diss.bib
+++ b/latex/diss.bib
@@ -1,4 +1,18 @@
 
+@book{stallings2011,
+	address = {Boston},
+	edition = {5th},
+	title = {Cryptography and network security: principles and practice},
+	isbn = {9780136097044},
+	lccn = {{TK5105.59} {.S713} 2011},
+	shorttitle = {Cryptography and network security},
+	publisher = {Prentice Hall},
+	author = {Stallings, William},
+	year = {2011},
+	keywords = {Coding theory, Computer networks, Computer security, Data encryption {(Computer} science), Security measures},
+	annote = {Previous ed.: 2006}
+},
+
 @book{fowler2012,
 	series = {{Addison-Wesley} Signature Series {(Fowler)}},
 	title = {Patterns of Enterprise Application Architecture},
@@ -569,4 +583,23 @@ the community can benefit from them as well.},
 	author = {{GitHub} contributors},
 	year = {2015},
 	howpublished = {https://help.github.com/articles/github-flavored-markdown/}
+},
+
+@online{steveklabnik2011,
+	title = {Nobody Understands {REST} or {HTTP}},
+	url = {http://blog.steveklabnik.com/posts/2011-07-03-nobody-understands-rest-or-http},
+	author = {Steve Klabnik},
+	month = jul,
+	year = {2011},
+	howpublished = {http://blog.steveklabnik.com/posts/2011-07-03-nobody-understands-rest-or-http}
+},
+
+@online{mozillacontributors2015-a,
+	title = {{WebSockets}},
+	url = {https://developer.mozilla.org/en-US/docs/WebSockets},
+	journal = {Mozilla Developer Network},
+	author = {Mozilla contributors},
+	month = feb,
+	year = {2015},
+	howpublished = {{https://developer.mozilla.org/en-US/docs/WebSockets}}
 }
