--- a/latex/planders-msreport.tex
+++ b/latex/planders-msreport.tex
@@ -355,10 +355,10 @@ fail me to tell of the multitudes of individuals \ldots
 \index{Abstract}%
 \indent
 
-This report is a case study of applying encapsulation, composition and distributed synchronization techniques to web application architecture with the use of Web Components, 
+This report is a case study of applying abstraction, encapsulation, and composition techniques to web application architecture with the use of Web Components, 
 a proposed extension to the W3C HTML5 document standard. 
 The author presents Speakur, a real-time social discussion plugin for the mobile and desktop web, 
-as an example of applying HTML5 Web Component technologies to realize software engineering principles such as encapsulation and interface-based abstraction, and the composition of applications from components sourced from diverse authors and frameworks.
+as an example of using HTML5 Web Components to realize software engineering principles such as encapsulation and interface-based abstraction, and the composition of applications from components sourced from diverse authors and frameworks.
 
 Web authors can add a Speakur discussion to their page by inserting a simple HTML element at the desired spot to give the page a real-time discussion or feedback system.
 Speakur uses the Polymer framework's implementation of the draft Web Components (WC) standard to achieve encapsulation of its internal implementation details from the containing page and present a simplified, well defined interface (API).
